--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,297 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  overflow-x: hidden;
+}
+
+main {
+  width: 100%;
+  height: 50vh;
+  background-color: #1c2833;
+  color: white;
+}
+
+main .header {
+  width: 85%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  row-gap: 50px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header h1 {
+  font-size: 2.3rem;
+}
+.header input[type="text"] {
+  padding: 10px 50px;
+  outline: none;
+  font-size: 1.2rem;
+  letter-spacing: 0.5px;
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+.body {
+  padding-top: 30px;
+  color: black;
+  background-color: #1c2833;
+}
+
+.body .body-wrapper {
+  width: 85%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+  row-gap: 45px;
+}
+
+.body-wrapper article {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px black;
+  padding-bottom: 10px;
+  cursor: default;
+  transition: 0.5s;
+}
+.body-wrapper article:hover {
+  transform: translateY(-10px);
+  box-shadow: 5px 10px 10px black;
+}
+
+article img {
+  width: 100%;
+  height: 200px;
+}
+
+article .details {
+  padding: 10px 20px;
+}
+
+article .name {
+  font-size: 1.7rem;
+  text-align: center;
+  padding: 5px 0;
+}
+
+article h3 {
+  margin-top: 18px;
+}
+
+article .learn-more {
+  display: block;
+  padding: 7px 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #1a5276;
+  color: white;
+  font-weight: 500;
+  margin: 25px auto 0;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+article .learn-more:hover {
+  background-color: rgb(20, 120, 20);
+}
+
+@media screen and (max-width: 1100px) {
+  .body .body-wrapper {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .header h1 {
+    font-size: 1.5rem;
+  }
+
+  main .header {
+    width: 95%;
+  }
+
+  .body .body-wrapper {
+    width: 90%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header h1 {
+    font-size: 1.2rem;
+    text-align: center;
+    line-height: 1.5;
+  }
+
+  main .header {
+    width: 95%;
+  }
+  .header input[type="text"] {
+    padding: 10px 30px;
+  }
+
+  .body .body-wrapper {
+    width: 85%;
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 310px) {
+  .header input[type="text"] {
+    padding: 10px;
+  }
+  article .details {
+    padding: 10px 0px 10px 5px;
+  }
+}
+
+.selected-country {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.selected-country-wrapper {
+  width: 85%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  gap: 65px;
+}
+
+.selected-country-wrapper .img img {
+  height: 100%;
+  width: 100%;
+  border: 0.5px solid lightgray;
+}
+
+.selected-country-wrapper .country-details {
+  text-align: left;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.country-details .details-left h3 {
+  font-size: 1.9rem;
+  font-weight: 900;
+  margin-bottom: 30px;
+}
+.country-details p {
+  font-size: 1.1rem;
+  margin-top: 25px;
+}
+.country-details span {
+  font-weight: 900;
+  font-size: 1.05rem;
+  padding-right: 10px;
+}
+
+.country-details .details-right {
+  margin-top: 40px;
+}
+
+.selected-details .borders {
+  margin-top: 30px;
+}
+
+.borders p {
+  font-size: 1rem;
+  font-weight: 900;
+  display: inline;
+  padding-right: 10px;
+}
+.borders small {
+  border: 0.5px solid gray;
+  padding: 6px;
+  margin-right: 7px;
+}
+
+.country-details .borders small {
+  font-size: 0.8rem;
+  margin-right: 10px;
+  padding: 5px;
+  border: 0.5px solid gray;
+}
+
+.selected-country h1 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.selected-country-wrapper h2 {
+  font-size: 2rem;
+}
+
+.back-btn {
+  display: block;
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  background-color: black;
+  color: white;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+.loader {
+  color: black;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.dark-mode {
+  margin-left: auto;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1000px) {
+  .selected-country-wrapper {
+    width: 95%;
+    grid-template-columns: 35% 65%;
+    gap: 50px;
+  }
+}
+@media screen and (max-width: 860px) {
+  .selected-country-wrapper {
+    width: 85%;
+    grid-template-columns: 1fr;
+    gap: 50px;
+    margin-top: 100px;
+  }
+
+  .selected-country {
+    height: fit-content;
+  }
+}
+@media screen and (max-width: 500px) {
+  .selected-country-wrapper .country-details {
+    grid-template-columns: 1fr;
+  }
+  .country-details .details-right {
+    margin-top: -10px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .selected-country-wrapper {
+    width: 95%;
+  }
+  .back-btn {
+    left: 20px;
+  }
 }
