--- a/src/index.css
+++ b/src/index.css
@@ -193,6 +193,7 @@ article .learn-more:hover {
 .country-details p {
   font-size: 1.1rem;
   margin-top: 25px;
+  line-height: 1.4;
 }
 .country-details span {
   font-weight: 900;
