--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,21 @@
 .search-bar.light-mode .search-right label {
   color: black;
 }
+
+.selected-country.light-mode {
+  background-color: var(--white-bg);
+  color: black;
+}
+.selected-country.light-mode .back-btn {
+  background-color: var(--white-bg);
+  color: black;
+}
+
+.selected-country.light-mode .borders small {
+  background-color: var(--white-bg);
+  color: black;
+}
+
+.selected-country.light-mode .img img {
+  box-shadow: 0px 0px 10px gray;
+}
